--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.19.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
